--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/liveVideoDB
+MONGODB_URI=mongodb+srv://mrnkt20052003:UQzOOSqbtweFkyVF@nodejs.syjpc4x.mongodb.net/?retryWrites=true&w=majority&appName=Nodejs
 JWT_SECRET=94cZx1vqEoKPNu9TjRmSfXW8aLd7Uqt2
 
 CLOUDINARY_NAME=ddoxl79sm
